# pycountssu1

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycountssu1/: __init__.py  plotting.py  pycountssu1.py
tests/: test_pycountssu1.py  zen.txt
