[tool.poetry]
name = "pycountssu1"
version = "0.1.0"
description = "Toy Package for DSCI 524 that counts words in given text."
authors = ["Salva Umar"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
